Fix agency-name too large for mobile display

--- a/theme.css
+++ b/theme.css
@@ -564,6 +564,7 @@ h1.logo img { font-size: 1rem; }
  * <= 481px
  */
 @media only screen and (max-width: 30.063em) {
+	#agency-name { font-size: 7.5vw; }
 }
 
 /**
